--- a/cadastro.html
+++ b/cadastro.html
@@ -4,27 +4,76 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Cadastro</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" href="css/menu.css">
 	</head>
 	<body>
-	<section class="login-page">
-		<form>
-			<div class="box">
-				<div class="form-head">
-					<h2>CADASTRO</h2>
-				</div>
-				<div class="form-body">
+		<nav class="navbar">
+			<button class="navbar-toggler ml-auto" type="button">
+			  <span class="navbar-toggler-icon text-white" onclick="openNav()" > | | |</span>
+			</button>
+	  
+			<div id="mySidenav" class="sidenav opacity">
+			  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-chevron-left text-white"></i></a>
+			  <div class='navVertical'>
+				  <a href="">Home</a>
+				  <a href="">Cadastro</a>
+				  <a href="">Login</a>
+		  </nav>
+		<section class="login-page">
+			<form>
+				<div class="box">
+					<div class="form-head">
+						<h2>CADASTRO</h2>
+					</div>
+					<div class="form-body">
 						<input type="text" placeholder="Nome">
 						<input type="wmail" placeholder="Email">
 						<input type="Password" placeholder="Senha"/>
 						<input type="Password" placeholder="Repita a senha"/>
+					</div>
+					<div class="form-footer">
+						<button type="submit">Cadastro</button>
+					</div>
+					<a class='small text-center' href="login.html">Já tenho uma conta!</a>
 				</div>
-				<div class="form-footer">
-					<button type="submit">Cadastro</button>
-				</div>
-				<a class='small text-center' href="login.html">Já tenho uma conta!</a>
-			</div>
-		</form>
-	</section>
+			</form>
+		</section>
+
+		<footer class="page-footer font-small bg-dark">
+            <div class="container">
+                <div class="row text-center d-flex justify-content-center pt-5 mb-3">
+                    <div class="col-md-2 mb-1">
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Sobre</a></h6>
+                    </div>
+                    <div class="col-md-2 mb-1">
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Suporte</a></h6>
+                    </div>
+                    <div class="col-md-2 mb-1">
+                    <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
+                </div>
+            </div>
+            
+            <hr class="rgba-white-light bg-light" style="margin: 0 15%;">
+
+            <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+                <div class="col-md-8 col-12 mt-4">
+                    <p class='text-white' style='line-height: 1.7rem'>AgendaOn é uma forma rápida de marcar horários com diferentes empresas de sua região.</p>
+                </div>
+            </div>
+
+            <hr class="clearfix d-md-none bg-light" style="margin: 10% 15% 5%;">
+                <div class="row pb-3">
+                    <div class="col-md-12">
+                        <div class="mb-5 flex-center">
+                    	</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bg-dark-dark text-center p-3 mt-n5 text-white">Copyright &copy; 2020 - Todos os direitos reservados</div>
+		</footer>
+		<script src="js/menu.js"></script>
 	</body>
 </html>
