--- a/sobre.html
+++ b/sobre.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+	<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Cadastro</title>
+		<title>Login </title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="css/menu.css">
@@ -27,22 +27,19 @@
 			<form>
 				<div class="box">
 					<div class="form-head">
-						<h2>CADASTRO</h2>
+						<h2>LOGIN</h2>
 					</div>
 					<div class="form-body">
-						<input type="text" placeholder="Nome">
-						<input type="wmail" placeholder="Email">
-						<input type="Password" placeholder="Senha"/>
-						<input type="Password" placeholder="Repita a senha"/>
+						<input type="text" placeholder="Nome" />
+						<input type="Password" placeholder="Senha" />
 					</div>
 					<div class="form-footer">
-						<button type="submit">Cadastro</button>
+						<button type="submit">Logar</button>
 					</div>
-					<a class='small text-center' href="login.html">Já tenho uma conta!</a>
+					<a class='small text-center' href="cadastro.html">Não tenho uma conta!</a>
 				</div>
 			</form>
 		</section>
-
 		<footer class="page-footer font-small bg-dark">
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
