--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="css/menu.css">
 	</head>
-	<body >
+	<body class="no-body">
 		<nav class="navbar">
 			<button class="navbar-toggler ml-auto" type="button">
-			  <span class="navbar-toggler-icon text-white" onclick="openNav()" > | | |</span>
+			  <span class="navbar-toggler-icon text-white " onclick="openNav()" > | | |</span>
 			</button>
 	  
 			<div id="mySidenav" class="sidenav opacity">
@@ -60,10 +60,10 @@
                 </div>
             </div>
             <div class='container'> 
-                <h2  class="text-center text-white">O que é o IF?</h2>
+                <h2  class="text-center ">O que é o IF?</h2>
                 <div class="row col-12">
                     <div class="col-5 mx-auto py-5">
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facilis fuga itaque possimus asperiores illum vitae magni sunt nostrum harum voluptates eligendi officiis repudiandae, omnis optio laborum enim rem unde!</p>
+                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facilis fuga itaque possimus asperiores illum vitae magni sunt nostrum harum voluptates eligendi officiis repudiandae, omnis optio laborum enim rem unde!</p>
                     </div>
                    <div class="col-5 mx-auto mt-3">
                         <img class="rounded"  src="https://www.rolnews.com.br/tim.php?src=uploads/noticias/2019/11/ifro-campus-cacoal-inaugura-mais-de-r-12-milhoes-em-obras-1574503898.jpeg&w=800&zc=0&q=80" alt="" width="300px"> 
