revisão das páginas

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 		<title>Home</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="stylesheet" href="css/menu.css">
+        <link rel="stylesheet" href="css/menu.css">
+        <script src="https://kit.fontawesome.com/4107044750.js" ></script>
 	</head>
 	<body class="no-body">
-		<nav class="navbar">
+		<nav class="navbar nav1">
+            <div class="ml-5 mt-3">
+				<i class="fab fa-strava fa-2x ml-5 mr-5">Nome</i>
+			</div>
 			<button class="navbar-toggler ml-auto" type="button">
-			  <span class="navbar-toggler-icon text-white " onclick="openNav()" > | | |</span>
-			</button>
+                <span class="navbar-toggler-icon" onclick="openNav()" ><i class="fas fa-bars fa-2x"></i></span>
+              </button>
 	  
 			<div id="mySidenav" class="sidenav opacity">
 			  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-chevron-left text-white"></i></a>
@@ -24,8 +28,14 @@
 			</div>
         </nav>
 
-        <div class="jumbotron">
-            <h1 class="text-center">IF Informa.</h1>
+        <div class="jumbotron mt-n5">
+            <div class="text-center">
+                <h1 class="display-2">Bem vindo(a)!</h1>
+                <div>
+                    <q>Aprender, é a chave que abre todas as portas para o mundo.</q><br>
+                    <cite>-Egedenny Rodrigues</cite>
+                </div>
+            </div>
         </div>
         <section>
             <div class="container mt-5">
@@ -60,10 +70,10 @@
                 </div>
             </div>
             <div class='container'> 
-                <h2  class="text-center ">O que é o IF?</h2>
+                <h2  class="text-center mb-5">O que é o IFRO?</h2>
                 <div class="row col-12">
                     <div class="col-5 mx-auto py-5">
-                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facilis fuga itaque possimus asperiores illum vitae magni sunt nostrum harum voluptates eligendi officiis repudiandae, omnis optio laborum enim rem unde!</p>
+                        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facilis fuga itaque possimus asperiores illum vitae magni sunt nostrum harum voluptates eligendi officiis repudiandae, omnis optio laborum enim rem unde!</p>
                     </div>
                    <div class="col-5 mx-auto mt-3">
                         <img class="rounded"  src="https://www.rolnews.com.br/tim.php?src=uploads/noticias/2019/11/ifro-campus-cacoal-inaugura-mais-de-r-12-milhoes-em-obras-1574503898.jpeg&w=800&zc=0&q=80" alt="" width="300px"> 
@@ -78,17 +88,15 @@
                     <div class="col-md-2 mb-1">
                         <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Sobre</a></h6>
                     </div>
+                   
                     <div class="col-md-2 mb-1">
-                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Suporte</a></h6>
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
                     </div>
-                    <div class="col-md-2 mb-1">
-                    <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
                 </div>
-            </div>
             <hr class="rgba-white-light bg-light" style="margin: 0 15%;">
             <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
                 <div class="col-md-8 col-12 mt-4">
-                    <p class='text-white' style='line-height: 1.7rem'>AgendaOn é uma forma rápida de marcar horários com diferentes empresas de sua região.</p>
+                    <p class='text-white' style='line-height: 1.7rem'>Nos somos uma platafoma para você que precisa de ajuda nos estudo. Vêm com a gente.</p>
                 </div>
             </div>
             </div>
