--- a/login.html
+++ b/login.html
@@ -7,11 +7,15 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="css/menu.css">
+		<script src="https://kit.fontawesome.com/4107044750.js" ></script>
 	</head>
 	<body>
 		<nav class="navbar">
+			<div class="ml-5 mt-3">
+				<i class="fab fa-strava fa-2x text-white ml-5 mr-5">Nome</i>
+			</div>
 			<button class="navbar-toggler ml-auto" type="button">
-			  <span class="navbar-toggler-icon text-white" onclick="openNav()" > | | |</span>
+			  <span class="navbar-toggler-icon text-white" onclick="openNav()" ><i class="fas fa-bars fa-2x"></i></span>
 			</button>
 	  
 			<div id="mySidenav" class="sidenav opacity">
@@ -45,10 +49,7 @@
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-1">
-                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Sobre</a></h6>
-                    </div>
-                    <div class="col-md-2 mb-1">
-                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Suporte</a></h6>
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="sobre.html">Sobre</a></h6>
                     </div>
                     <div class="col-md-2 mb-1">
                     <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
