--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 	<html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Home</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="css/menu.css">
         <script src="https://kit.fontawesome.com/4107044750.js" ></script>
 	</head>
 	<body class="no-body">
-		<nav class="navbar nav1">
-            <div class="ml-5 mt-3">
-				<i class="fab fa-strava fa-2x ml-5 mr-5">Nome</i>
-			</div>
-			<button class="navbar-toggler ml-auto" type="button">
-                <span class="navbar-toggler-icon" onclick="openNav()" ><i class="fas fa-bars fa-2x"></i></span>
+		<nav class="navbar">
+            <div class="ml-5">
+                <i class="fab fa-strava fa-2x ml-5 mr-5 text-white">Nome</i>
+            </div>
+            <button class="navbar-toggler ml-auto" type="button">
+                <span class="navbar-toggler-icon" onclick="openNav()" ><i class="fas fa-bars fa-2x text-white"></i></span>
               </button>
-	  
-			<div id="mySidenav" class="sidenav opacity">
-			  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-chevron-left text-white"></i></a>
-			  <div>
-				  <a href="index.html">Home</a>
-				  <a href="cadastro.html">Cadastro</a>
-				  <a href="login.html">Login</a>
-			  </div>
-			</div>
+      
+            <div id="mySidenav" class="sidenav opacity">
+              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-chevron-left text-white"></i></a>
+              <div>
+                  <a href="index.html">Home</a>
+                  <a href="cadastro.html">Cadastro</a>
+                  <a href="login.html">Login</a>
+              </div>
+            </div>
         </nav>
 
-        <div class="jumbotron mt-n5">
+        <div class="jumbotron">
             <div class="text-center">
                 <h1 class="display-2">Bem vindo(a)!</h1>
                 <div>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <section>
-            <div class="container mt-5">
+            <div class="container mt-auto">
                 <div class="row col-12 mb-2">
                     <div class="col-4">
                         <div class="card">
@@ -73,7 +73,7 @@
                 <h2  class="text-center mb-5">O que é o IFRO?</h2>
                 <div class="row col-12">
                     <div class="col-5 mx-auto py-5">
-                        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facilis fuga itaque possimus asperiores illum vitae magni sunt nostrum harum voluptates eligendi officiis repudiandae, omnis optio laborum enim rem unde!</p>
+                        <p class="text-justify">O IFRO é uma instituição especializada na oferta de educação profissional e tecnológica atuando também na educação básica e superior, na pesquisa e no desenvolvimento de produtos e serviços em estreita articulação com a sociedade.</p>
                     </div>
                    <div class="col-5 mx-auto mt-3">
                         <img class="rounded"  src="https://www.rolnews.com.br/tim.php?src=uploads/noticias/2019/11/ifro-campus-cacoal-inaugura-mais-de-r-12-milhoes-em-obras-1574503898.jpeg&w=800&zc=0&q=80" alt="" width="300px"> 
@@ -86,11 +86,11 @@
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-1">
-                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Sobre</a></h6>
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="sobre.html">Sobre</a></h6>
                     </div>
                    
                     <div class="col-md-2 mb-1">
-                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="contato.html">Contatos</a></h6>
                     </div>
                 </div>
             <hr class="rgba-white-light bg-light" style="margin: 0 15%;">
