--- a/login.html
+++ b/login.html
@@ -51,8 +51,8 @@
                     <div class="col-md-2 mb-1">
                         <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="sobre.html">Sobre</a></h6>
                     </div>
-                    <div class="col-md-2 mb-1">
-                    <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
+                    <div class="col-md-2 mb-1"></div>
+                    <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="contato.html">Contatos</a></h6>
                 </div>
             </div>
             <hr class="rgba-white-light bg-light" style="margin: 0 15%;">
