--- a/cadastro.html
+++ b/cadastro.html
@@ -51,10 +51,10 @@
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-1">
-                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Sobre</a></h6>
+                        <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="sobre.html">Sobre</a></h6>
                     </div>
                     <div class="col-md-2 mb-1">
-                    <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="#!">Contatos</a></h6>
+                    <h6 class="text-uppercase font-weight-bold"><a class='nav-link btn-white' href="contato.html">Contatos</a></h6>
                 </div>
             </div>
             <hr class="rgba-white-light bg-light" style="margin: 0 15%;">
